--- a/CT176_OOP/Code/.project
+++ b/CT176_OOP/Code/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BaiTapLT_renluyen_java</name>
+	<name>OOPBaiTapLT</name>
 	<comment></comment>
 	<projects>
 	</projects>
